获取系统信息

--- a/WmiAdapter/WmiAdapter.vcxproj
+++ b/WmiAdapter/WmiAdapter.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{FA5E8685-AEDA-43F8-B5E5-35EF9277BA92}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>WmiAdapter</RootNamespace>
+    <WindowsTargetPlatformVersion>10</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -57,6 +58,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>Iphlpapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -75,6 +77,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>Iphlpapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -82,11 +85,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="system_information.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="wmi_adapter.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="system_information.cpp" />
     <ClCompile Include="WmiAdapter.cpp" />
     <ClCompile Include="wmi_adapter.cpp" />
   </ItemGroup>
