--- a/WmiAdapter/WmiAdapter.vcxproj.filters
+++ b/WmiAdapter/WmiAdapter.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="wmi_adapter.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="system_information.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -36,6 +39,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="wmi_adapter.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="system_information.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
