--- a/WmiAdapter/WmiAdapter.vcxproj
+++ b/WmiAdapter/WmiAdapter.vcxproj
@@ -84,6 +84,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="device_identify.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="system_information.h" />
     <ClInclude Include="targetver.h" />
