--- a/WmiAdapter/WmiAdapter.vcxproj.filters
+++ b/WmiAdapter/WmiAdapter.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="system_information.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="device_identify.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
